# bilihud

./: .gitignore  README.md  bilihud.desktop  pyproject.toml
.github/workflows/: package.yml  test.yml
docs/superpowers/plans/: 2026-06-13-live-control-state-semantics.md  2026-06-13-qasync-danmaku-shutdown.md  2026-06-14-bilihud-mirror.md  2026-06-14-live-emoticon-picker.md
docs/superpowers/specs/: 2026-06-13-live-control-state-semantics-design.md  2026-06-13-qasync-danmaku-shutdown-design.md  2026-06-14-bilihud-mirror-design.md  2026-06-14-live-emoticon-picker-design.md
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  install  rules
packaging/fedora/: bilihud.spec
packaging/gentoo/app-misc/bilihud/: bilihud-9999.ebuild
src/bilihud/: __init__.py  auth.py  build_bridge.sh  danmaku_client.py  danmaku_format.py  danmaku_widget.py  layer_shell_bridge.cpp  layer_shell_loader.py  live_api.py  live_control_dialog.py  live_emoticons.py  main.py  mirror_server.py  mirror_settings_dialog.py  mirror_state.py  obs_api.py
tests/: test_auth.py  test_danmaku_client.py  test_danmaku_format.py  test_danmaku_widget.py  test_debian_packaging.py  test_layer_shell_loader.py  test_live_api.py  test_live_control_state_semantics.py  test_live_emoticons.py  test_main.py  test_mirror_server.py  test_mirror_settings_dialog.py  test_mirror_state.py  test_obs_api.py
